--- a/Taller-4-PW-main/Taller-4-PW-main/slider.css
+++ b/Taller-4-PW-main/Taller-4-PW-main/slider.css
@@ -1,77 +1,99 @@
-body{ background-color:#333; 
-    font-family:"Courier New", Courier, monospace;}
-  .inputDiv {
-    width: 300px;
-    display:block;
-    margin: 50px auto;
-    color:#aaa;
-    position:relative;
-  }
-  .output{display:inline-block; width:40px; text-align:center;}
-  
-  input[type='range'] {
-    display: inline-block;
-    width: 250px;
-  }
-  
-  input[type='range']:focus {
-    outline: none;
-  }
-  
-  input[type='range'],
-  input[type='range']::-webkit-slider-runnable-track,
-  input[type='range']::-webkit-slider-thumb {
-    -webkit-appearance: none;
-  }
-  
-  input[type=range]::-webkit-slider-thumb {
-    background-color: #777;
-    width: 20px;
-    height: 20px;
-    border: 3px solid #333;
-    border-radius: 50%;
-    margin-top: -9px;
-  }
-  
-  input[type=range]::-moz-range-thumb {
-    background-color: #777;
-    width: 15px;
-    height: 15px;
-    border: 3px solid #333;
-    border-radius: 50%;
-  }
-  
-  input[type=range]::-ms-thumb {
-    background-color: #777;
-    width: 20px;
-    height: 20px;
-    border: 3px solid #333;
-    border-radius: 50%;
-  }
-  
-  input[type=range]::-webkit-slider-runnable-track {
-    background-color: #777;
-    height: 3px;
-  }
-  
-  input[type=range]:focus::-webkit-slider-runnable-track {
-    outline: none;
-  }
-  
-  input[type=range]::-moz-range-track {
-    background-color: #777;
-    height: 3px;
-  }
-  
-  input[type=range]::-ms-track {
-    background-color: #777;
-    height: 3px;
-  }
-  
-  input[type=range]::-ms-fill-lower {
-    background-color: HotPink
-  }
-  
-  input[type=range]::-ms-fill-upper {
-    background-color: black;
-  } 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  background: #833ab4;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: content-box;
+
+}
+
+.form-register {
+  width: 500px;
+  background-color: white;
+  padding: 40px;
+  margin: auto;
+  margin-top: 50px;
+  border-radius: 10px;
+  font-family: 'calibri';
+  box-shadow: 0 0 6px 0 #000;
+}
+
+.form-register h3 {
+  font-size: 30px;
+  margin-bottom: 20px;
+  text-align: center;
+  font-family: Cambria;
+  margin-top: 10px;
+}
+
+.controls {
+  width: 100%;
+  background: none;
+  color: #6d6d6d;
+  font-size: 18px;
+  padding: 10px 10px 10px 5px;
+  display: block;
+  border: 1px solid #4fc4e7;
+  border-radius: 4px;
+  font-family: 'calibri';
+}
+
+.from-label{
+  font-size: 16px;
+}
+
+.form-register p {
+  height: 40px;
+  text-align: center;
+  font-size: 18px;
+  line-height: 40px;
+}
+
+.form-register a {
+  color: white;
+  text-decoration: none;
+}
+
+.form-register a:hover {
+  color: white;
+  text-decoration: underline;
+}
+
+.form-register .botons {
+  width: 50%;
+  background: #4fc4e7;
+  border: none;
+  padding: 12px;
+  color: black;
+  margin: 16px 100px;
+  font-size: 16px;
+  border-radius: 4px;
+}
+
+.porDefecto{
+  display: none;
+}
+
+.activarMensaje{
+  font-size: 8px;
+  position: relative;
+  color:red;
+  display: block;
+}
+.activarMensajeCorrecto{
+  font-size: 8px;
+  position: relative;
+  color:#1ad401;
+  display: block;
+}
+.formGustos{
+  padding: 10px;
+}
