--- a/Taller-4-PW-main/Taller-4-PW-main/registro.css
+++ b/Taller-4-PW-main/Taller-4-PW-main/registro.css
@@ -2,87 +2,102 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-  
-body{
-    background: #000000;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 
+body {
+    background: #833ab4;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: content-box;
 }
-  
+
 .form-register {
-    width: 400px;
-    background: #f7f6f6;
-    padding: 30px;
+    width: 500px;
+    background-color: white;
+    padding: 40px;
     margin: auto;
-    margin-top: 100px;
-    border-radius: 4px;
+    margin-top: 50px;
+    border-radius: 10px;
     font-family: 'calibri';
-    box-shadow: 7px 13px 37px #000;
+    box-shadow: 0 0 6px 0 #000;
 }
-  
+
 .form-register h3 {
-    font-size: 22px;
+    font-size: 30px;
     margin-bottom: 20px;
     text-align: center;
+    font-family: Cambria;
+    margin-top: 10px;
 }
-  
+
 .controls {
     width: 100%;
-    background: #ffffff;
-    padding: 10px;
-    border-radius: 4px;
-    margin-bottom: 16px;
-    border: 1px solid;
-    font-family: 'calibri';
+    background: none;
+    color: #6d6d6d;
     font-size: 18px;
-    color: rgb(0, 0, 0);
+    padding: 10px 10px 10px 5px;
+    display: block;
+    border: 1px solid #4fc4e7;
+    border-radius: 4px;
+    font-family: 'calibri';
 }
-  
+
+.from-label {
+    font-size: 16px;
+}
+
 .form-register p {
     height: 40px;
     text-align: center;
     font-size: 18px;
     line-height: 40px;
 }
-  
+
 .form-register a {
     color: white;
     text-decoration: none;
 }
-  
+
 .form-register a:hover {
     color: white;
     text-decoration: underline;
 }
-  
+
 .form-register .botons {
-    width: 100%;
-    background: #1ad401;
+    width: 50%;
+    background: #4fc4e7;
     border: none;
     padding: 12px;
     color: black;
-    margin: 16px 0;
+    margin: 16px 100px;
     font-size: 16px;
+    border-radius: 4px;
 }
 
-.porDefecto{
+.porDefecto {
     display: none;
 }
 
-.activarMensaje{
+.activarMensaje {
     font-size: 8px;
     position: relative;
-    color:red;
+    color: red;
     display: block;
 }
-.activarMensajeCorrecto{
+
+.activarMensajeCorrecto {
     font-size: 8px;
     position: relative;
-    color:#1ad401;
+    color: #1ad401;
     display: block;
 }
-.formGustos{
-    padding: 12px;
+
+.formGustos {
+    padding: 10px;
 }
