--- a/Taller_4/slider.css
+++ b/Taller_4/slider.css
@@ -1,85 +1,104 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background-color: #333;
-    font-family: "Courier New", Courier, monospace;
+    background: #833ab4;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: content-box;
 }
 
-.inputDiv {
-    width: 300px;
-    display: block;
-    margin: 50px auto;
-    color: #aaa;
-    position: relative;
+.form-register {
+    width: 500px;
+    background-color: white;
+    padding: 40px;
+    margin: auto;
+    margin-top: 50px;
+    border-radius: 10px;
+    font-family: 'calibri';
+    box-shadow: 0 0 6px 0 #000;
 }
 
-.output {
-    display: inline-block;
-    width: 40px;
+.form-register h3 {
+    font-size: 30px;
+    margin-bottom: 20px;
     text-align: center;
+    font-family: Cambria;
+    margin-top: 10px;
 }
 
-input[type='range'] {
-    display: inline-block;
-    width: 250px;
+.controls {
+    width: 100%;
+    background: none;
+    color: #6d6d6d;
+    font-size: 18px;
+    padding: 10px 10px 10px 5px;
+    display: block;
+    border: 1px solid #aee0f0;
+    border-radius: 4px;
+    font-family: 'calibri';
 }
 
-input[type='range']:focus {
-    outline: none;
+.form-label {
+    font-family: 'sans';
+    font-size: 18px;
 }
 
-input[type='range'],
-input[type='range']::-webkit-slider-runnable-track,
-input[type='range']::-webkit-slider-thumb {
-    -webkit-appearance: none;
+.form-register p {
+    height: 40px;
+    text-align: center;
+    font-size: 18px;
+    line-height: 40px;
 }
 
-input[type=range]::-webkit-slider-thumb {
-    background-color: #777;
-    width: 20px;
-    height: 20px;
-    border: 3px solid #333;
-    border-radius: 50%;
-    margin-top: -9px;
+.form-register a {
+    color: white;
+    text-decoration: none;
 }
 
-input[type=range]::-moz-range-thumb {
-    background-color: #777;
-    width: 15px;
-    height: 15px;
-    border: 3px solid #333;
-    border-radius: 50%;
+.form-register a:hover {
+    color: white;
+    text-decoration: underline;
 }
 
-input[type=range]::-ms-thumb {
-    background-color: #777;
-    width: 20px;
-    height: 20px;
-    border: 3px solid #333;
-    border-radius: 50%;
+.form-register .botons {
+    width: 50%;
+    background: #aee0f0;
+    border: none;
+    padding: 12px;
+    color: black;
+    margin: 16px 100px;
+    font-size: 16px;
+    border-radius: 4px;
 }
 
-input[type=range]::-webkit-slider-runnable-track {
-    background-color: #777;
-    height: 3px;
+.porDefecto {
+    display: none;
 }
 
-input[type=range]:focus::-webkit-slider-runnable-track {
-    outline: none;
+.activarMensaje {
+    font-size: 8px;
+    position: relative;
+    color: red;
+    display: block;
 }
 
-input[type=range]::-moz-range-track {
-    background-color: #777;
-    height: 3px;
+.activarMensajeCorrecto {
+    font-size: 8px;
+    position: relative;
+    color: #1ad401;
+    display: block;
 }
 
-input[type=range]::-ms-track {
-    background-color: #777;
-    height: 3px;
-}
-
-input[type=range]::-ms-fill-lower {
-    background-color: HotPink
-}
-
-input[type=range]::-ms-fill-upper {
-    background-color: black;
+.formGustos {
+    padding: 10px;
 }
