--- a/taller-5/registro.css
+++ b/taller-5/registro.css
@@ -14,6 +14,34 @@ body {
     box-shadow: 0px 0px 10px 10px blueviolet;
 }
 
+.grilla {
+    background-color: rgb(255, 255, 255);
+    margin: auto;
+    width: 60%;
+    border-radius: 5px;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    box-shadow: 0px 0px 10px 10px black;
+    display: grid;
+    grid-template-columns: repeat(5, 100%);
+    grid-template-rows: repeat(5, 100%);
+    gap: 1em;
+    border: 1px solid black;
+    font-size: 15px;
+    font-family: sans-serif;
+}
+
+.centered {
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+#tableBody_users {
+    background-color: rgb(240, 240, 240);
+}
+
 .entrada {
     width: 300px;
     margin: auto;
@@ -56,40 +84,31 @@ body {
 }
 
 .etiqueta_box {
-    font-size: 22px;
+    font-size: 20px;
     font-family: monospace;
+    align-items: center;
 }
 
-#despliegue_gustos {
-    width: 250px;
+#despliegue_enfermedades {
+    width: 300px;
     margin: auto;
     padding-top: 10px;
     margin-bottom: 30px;
     display: none;
 }
 
-.entrada_radio {
+.entrada_check {
     width: 300px;
     margin: auto;
     display: flex;
     padding-top: 20px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 
-#gustos {
+#enfermedades {
     flex: 0;
-    width: 30px;
-}
-
-.ingresar2 {
-    margin: auto;
-    width: 250px;
-    font-size: 18px;
-    border-radius: 5px;
-    font-family: monospace;
-    box-shadow: 2px 2px 1px 0px blue;
-    border: 0.1px solid blueviolet;
-    background-color: rgb(240, 240, 240);
+    width: 40px;
+    font-size: 10px;
 }
 
 #registrar {
@@ -100,11 +119,6 @@ body {
     color: white;
     border: 2px solid blueviolet;
     margin-left: 100px;
-}
-
-#grilla {
-    background-color: blue;
-    width: 50%;
 }
 
 #separar {
