--- a/taller-5/registro.css
+++ b/taller-5/registro.css
@@ -23,7 +23,7 @@ body {
     padding-bottom: 50px;
     margin-top: 50px;
     margin-bottom: 50px;
-    box-shadow: 0px 0px 10px 10px black;
+    box-shadow: 0px 0px 10px 10px blueviolet;
     display: grid;
     grid-template-columns: repeat(5, 100%);
     grid-template-rows: repeat(5, 100%);
@@ -31,6 +31,7 @@ body {
     border: 1px solid black;
     font-size: 15px;
     font-family: sans-serif;
+    height: 670px;
 }
 
 .centered {
