--- a/taller-5/validar.css
+++ b/taller-5/validar.css
@@ -9,6 +9,14 @@
     padding-bottom: 5px;
 }
 
-.form_secundario .alerta {
-    transform: translate(-10%, 0%);
+#age{
+    text-align: center;
+    font-size: 20px;
+    font-family: monospace;
+    display: none;
+    color: black;
+    padding: 0px;
+    margin: 0px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
