--- a/taller-5/registro.css
+++ b/taller-5/registro.css
@@ -4,25 +4,29 @@ body {
 
 #formulario {
     background-color: white;
-    margin: auto;
-    width: 400px;
-    border-radius: 5px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    width: auto;
     margin-top: 50px;
     margin-bottom: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     box-shadow: 0px 0px 10px 10px blueviolet;
+    height: auto;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .grilla {
     background-color: rgb(255, 255, 255);
     margin: auto;
-    width: 60%;
+    width: 940px;
     border-radius: 5px;
     padding-top: 20px;
     padding-bottom: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
     margin-top: 50px;
     margin-bottom: 50px;
+    margin-left: 50px;
     box-shadow: 0px 0px 10px 10px blueviolet;
     display: grid;
     grid-template-columns: repeat(5, 100%);
@@ -31,7 +35,7 @@ body {
     border: 1px solid black;
     font-size: 15px;
     font-family: sans-serif;
-    height: 670px;
+    height: 700px;
 }
 
 .centered {
@@ -102,8 +106,7 @@ body {
     width: 300px;
     margin: auto;
     display: flex;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-top: 30px;
 }
 
 #enfermedades {
@@ -119,9 +122,17 @@ body {
     font-size: 25px;
     color: white;
     border: 2px solid blueviolet;
-    margin-left: 100px;
+    margin-left: 50px;
+    margin-top: 10px;
 }
 
 #separar {
     display: flex;
+}
+
+#datatable_users{
+    width: 900px;
+    margin: auto;
+    margin-right: 10px;
+    margin-left: 10px;
 }
