--- a/taller-5/registro.css
+++ b/taller-5/registro.css
@@ -21,7 +21,7 @@ body {
     width: 940px;
     border-radius: 5px;
     padding-top: 20px;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
     padding-left: 10px;
     padding-right: 10px;
     margin-top: 50px;
@@ -35,7 +35,7 @@ body {
     border: 1px solid black;
     font-size: 15px;
     font-family: sans-serif;
-    height: 700px;
+    height: auto;
 }
 
 .centered {
@@ -128,11 +128,15 @@ body {
 
 #separar {
     display: flex;
+    height: auto;
 }
 
-#datatable_users{
-    width: 900px;
+#tabla_usuarios{
+    width: 98%;
+    height: auto;
     margin: auto;
     margin-right: 10px;
     margin-left: 10px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 }
