finalizacion parcial 2210054 miguel pimiento

--- a/Parcial_Pimiento_2210054/formulario.css
+++ b/Parcial_Pimiento_2210054/formulario.css
@@ -4,13 +4,14 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center; 
-    height: 100vh; 
+    background-size: cover;
 }
 
 .div_titulo{
     text-align: center;
     font-size: 40px;
     padding-bottom: 20px;
+    padding-top: 50px;
 }
 
 .contenedor{
@@ -19,9 +20,11 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center; 
-    width: 400px;
+    width: 500px;
     border-radius: 8px;
     box-shadow:  5px 5px 5px rgba(0, 0, 0, 0.5);
+    padding-bottom: 10px;
+    margin-bottom: 100px;
 }
 
 #titulo_formulario{
@@ -39,31 +42,32 @@ body{
 }
 
 .formulario div{
-    width: 300px;
+    width: 400px;
 }
 
-i{
-    position: relative; 
+.ent i{
+    position: relative;
+    font-size: 20px; 
 	left: 90%;
-	top: 50%;
-	z-index: 50;
+	top: 34px;
+    z-index: 50;
 }
 
 #ingreso_gustos{
     margin-top: 20px;
     margin-bottom: 20px;
-    width: 300px;
+    width: 400px;
     display: flex;
 }
 
 
 #div_guardar, #guardar{
-    width: 70px;
+    width: 100px;
 }
 
 
 #div_input_gustos, #input_gustos{
-    width: 230px;
+    width: 300px;
 }
 
 #div_link{
@@ -72,6 +76,7 @@ i{
 }
 
 #icon_bandera{
+    position: relative;
     transform: translate(-50%, -50%);
     left: 50%;
     top: 50%;
@@ -80,6 +85,12 @@ i{
 
 }
 
+#div_bandera{
+    background-color: #218f38; 
+    border-radius: 5px;
+}
 
-
-
+#div_botones{
+    margin-bottom: 20px;
+    display: none;
+}
