subiendo back_spa basico

--- a/mpa/src/main/resources/templates/actualizarLibro.html
+++ b/mpa/src/main/resources/templates/actualizarLibro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Añadir un libro al usuario</title>
+    <title>Actualizar libro</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
     <script src="https://kit.fontawesome.com/650c668a14.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" th:href="@{/css/libros.css}">
@@ -33,22 +33,29 @@
     </div>
     <div class="secciones">
         <article class="enter_form" id="ingresar_libro">
-            <form class="box" id="anadir_formulario" action="/adiLibro" method="post">
-                <center>
-                    <p id = "pAnadido" th:if="${condicion eq true}"  class="tag is-success is-light is-medium">Libro agregado con exito</p>
-                </center>
+            <form class="box" id="anadir_formulario" action="/ediLibro" method="post">
+
+                <div class="field">
+                    <label class="label">Id del libro</label>
+                    <div class="control">
+                        <input id="id" name="id" class="input" type="text" th:value="${libro.id}" readonly/>
+                    </div>
+                </div>
+
+
                 <div class="field">
                     <label class="label">Nombre del libro</label>
                     <div class="control">
-                        <input class="input" type="text" id="Nombre_libro" name="Nombre_libro" placeholder="Ingrese el nombre del libro" required>
+                        <input th:value="${libro.titulo}" class="input" type="text" id="Nombre_libro" name="Nombre_libro" placeholder="Ingrese el nombre del libro" required>
                         <p class="porDefecto tag is-danger is-light is-medium" id="correoError">Maximo 100 caracteres</p>
                         <p class="porDefecto tag is-danger is-light is-medium" id="correoError">Este campo no puede estar vacio</p>
                     </div>
                 </div>
+                
                 <div class="field">
                     <label class="label">Autor del libro</label>
                     <div class="control">
-                        <input class="input" type="text" id="autor_libro" name="autor_libro" placeholder="Ingrese el nombre del autor" required>
+                        <input th:value="${libro.autor}" class="input" type="text" id="autor_libro" name="autor_libro" placeholder="Ingrese el nombre del autor" required>
                         <p class="porDefecto tag is-danger is-light is-medium" id="correoError">Maximo 50 caracteres</p>
                         <p class="porDefecto tag is-danger is-light is-medium" id="correoError">Este campo no puede estar vacio</p>
                     </div>
@@ -57,7 +64,7 @@
                     </label>
                     <label class="label">Cantidad</label>
                     <div class="control">
-                        <input class="input" type="text" id="cantidad" name="cantidad" placeholder="Ingrese la cantidad disponible" required>
+                        <input th:value="${libro.cantidad}" class="input" type="text" id="cantidad" name="cantidad" placeholder="Ingrese la cantidad disponible" required>
                         <p class="porDefecto tag is-danger is-light is-medium" id="correoError">Solo numeros enteros</p>
                         <p class="porDefecto tag is-danger is-light is-medium" id="correoError">Este campo no puede estar vacio</p>
                     </div>
@@ -65,14 +72,14 @@
                 <div class="field">
                     <label class="label">Precio del libro</label>
                     <div class="control">
-                        <input class="input" type="text" id="precio_libro" name="precio_libro" placeholder="Ingrese el precio del libro" required>
+                        <input th:value="${libro.precio}" class="input" type="text" id="precio_libro" name="precio_libro" placeholder="Ingrese el precio del libro" required>
                         <p class="porDefecto tag is-danger is-light is-medium" id="correoError">Cantidad invalida (max 2 decimales)</p>
                         <p class="porDefecto tag is-danger is-light is-medium" id="correoError">Este campo no puede estar vacio</p>
                     </div>
                 </div>
                 <div class="field is-grouped">
                     <div class="control">
-                        <button type="button" class="button is-link is-responsive is-outlined is-rounded" id="btnAddBook">Añadir</button>
+                        <button type="button" class="button is-link is-responsive is-outlined is-rounded" id="btnAddBook">Editar</button>
                     </div>
                 </div>
 
