--- a/spa/spa-fronted/src/styles.css
+++ b/spa/spa-fronted/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url(https://bootswatch.com/5/minty/bootstrap.min.css);
+.cursor-pointer {
+    cursor: pointer;
+}
