--- a/spa/spa-fronted/src/app/components/home/home.component.html
+++ b/spa/spa-fronted/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
         <img src="/assets/images/portada.png" alt="portada" class="img img-thumbnail ">
         <hr>
         <h3>Spa en angular</h3>
-        <p>Desarrollado por @JRamirez y @MPimiento</p>
+        <p>Desarrollado por JRamirez y MPimiento</p>
         <p>&copy; {{year}} Todos los derechos reservados</p>
     </div>
     <div class="col-md 4"></div>
