--- a/spa/spa-fronted/src/app/app.component.html
+++ b/spa/spa-fronted/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header>hola mundo</app-header>
 <div class="container">
     <router-outlet></router-outlet>
 </div>
