--- a/spa/spa-fronted/src/app/components/movies/movie-details/movie-details.component.html
+++ b/spa/spa-fronted/src/app/components/movies/movie-details/movie-details.component.html
@@ -44,7 +44,7 @@
             <p></p>
             <div>
                 <button (click)="Listar(movie._id)" class="btn btn-info">Ver reseñas</button>
-                <button (click)="Nuevo()" class="btn btn-info" style="margin-left: 10px;">Nuevo</button>
+                <button (click)="Nuevo()" class="btn btn-info" style="margin-left: 10px;">Agregar reseña</button>
             </div>
         </form>
     </div>
