--- a/spa/spa-fronted/src/app/components/reviews/add/add.component.html
+++ b/spa/spa-fronted/src/app/components/reviews/add/add.component.html
@@ -4,14 +4,15 @@
             <h3>Compartenos tu opinión acerca de esta película</h3>
         </div>
         <div class="card-body">
-            <form action="">
-                <div class="for-group">
-                    <label for="coment"></label>
-                    <textarea name="coment" class="form-control"></textarea>
+            <form class="form-group">
+                <div class="form-controls">
+                    <span></span>
+                    <label for="coment">Escribe tu opinión al respecto</label>
+                    <input type="text" class="form-control" name="coment" id="coment" [(ngModel)]="review.comentario" required minlength="4" maxlength="60" #nombre="ngModel">
                     <p></p>
                 </div>
-                <button class="btn btn-primary" defaultHref="/">Añadir</button>
-                <button (click)="Regresar()" class="btn btn-danger" style="margin-left: 10px;">Cancelar</button>
+                <button (click)="guardarSubmit()" class="btn btn-primary ">Añadir</button>
+                <button (click)="Regresar() " class="btn btn-danger " style="margin-left: 10px; ">Cancelar</button>
             </form>
         </div>
     </div>
