mirar como caputar movie._Id

--- a/spa/spa-fronted/src/app/components/movies/movie-details/movie-details.component.html
+++ b/spa/spa-fronted/src/app/components/movies/movie-details/movie-details.component.html
@@ -43,7 +43,7 @@
         <form>
             <p></p>
             <div>
-                <button (click)="Listar(movie._id)" class="btn btn-info">Ver reseñas</button>
+                <button (click)="Listar()" class="btn btn-info">Ver reseñas</button>
                 <button (click)="Nuevo()" class="btn btn-info" style="margin-left: 10px;">Agregar reseña</button>
             </div>
         </form>
