agragando varias funcionalidades del front

--- a/spa/spa-fronted/src/app/components/movies/movie-details/movie-details.component.html
+++ b/spa/spa-fronted/src/app/components/movies/movie-details/movie-details.component.html
@@ -43,8 +43,8 @@
         <form>
             <p></p>
             <div>
-                <button (click)="Listar()" class="btn btn-info">Ver reseñas</button>
-                <button (click)="Nuevo()" class="btn btn-info" style="margin-left: 10px;">Agregar reseña</button>
+                <button (click)="Listar(movie._id)" class="btn btn-info">Ver reseñas</button>
+                <button (click)="Nuevo(movie._id)" class="btn btn-info" style="margin-left: 10px;">Agregar reseña</button>
             </div>
         </form>
     </div>
