--- a/spa/spa-fronted/src/app/components/reviews/listar/listar.component.html
+++ b/spa/spa-fronted/src/app/components/reviews/listar/listar.component.html
@@ -19,7 +19,7 @@
                         <td>{{resena.comentario}}</td>
                         <td>
                             <button class="btn btn-warning">Editar</button>
-                            <button class="btn btn-danger" style="margin-left: 10px;">Eliminar</button>
+                            <button (click)="Eliminar(resena.id)" class="btn btn-danger" style="margin-left: 10px;">Eliminar</button>
                         </td>
                         <td></td>
                     </tr>
