--- a/spa/spa-fronted/src/app/components/movies/movie-details/movie-details.component.html
+++ b/spa/spa-fronted/src/app/components/movies/movie-details/movie-details.component.html
@@ -39,12 +39,11 @@
                 </tr>
             </tbody>
         </table>
-        <button (click)="Regresar()" class="btn btn-primary" defaultHref="/">Regresar</button>
+        <button (click)="Regresar()" class="btn btn-primary">Regresar</button>
         <form>
             <p></p>
             <div>
                 <button (click)="Listar(movie._id)" class="btn btn-info">Ver reseñas</button>
-                <button (click)="Nuevo(movie._id)" class="btn btn-info" style="margin-left: 10px;">Agregar reseña</button>
             </div>
         </form>
     </div>
