--- a/spa/spa-fronted/src/app/components/reviews/listar/listar.component.html
+++ b/spa/spa-fronted/src/app/components/reviews/listar/listar.component.html
@@ -18,7 +18,7 @@
                         <td>{{resena.pelicula}}</td>
                         <td>{{resena.comentario}}</td>
                         <td>
-                            <button class="btn btn-warning">Editar</button>
+                            <button (click)="Editar(resena)" class="btn btn-warning">Editar</button>
                             <button (click)="Eliminar(resena.id)" class="btn btn-danger" style="margin-left: 10px;">Eliminar</button>
                         </td>
                         <td></td>
@@ -29,4 +29,5 @@
     </div>
     <p></p>
     <button (click)="Regresar()" class="btn btn-primary" defaultHref="/">Regresar</button>
+    <button (click)="Nuevo(movie._id)" class="btn btn-info" style="margin-left: 10px;">Agregar reseña</button>
 </div>
