--- a/spa/spa-fronted/src/app/components/movies/movies-list/movies-list.component.html
+++ b/spa/spa-fronted/src/app/components/movies/movies-list/movies-list.component.html
@@ -5,9 +5,14 @@
     <div class="card col-md-4 col-md-6 col-xs-12" *ngFor="let movie of movies">
         <div class="alert alert-info cursor-pointer" [routerLink]="['/movie', movie._id]">
             <div class="card-body">
-                <p class="card-tittle">Título: {{movie.title}}</p>
-                <p>{{movie.year}}</p>
+                <div>
+                    <p class="card-tittle">Título: {{movie.title}}</p>
+                </div>
+                <div>
+                    <p>{{movie.year}}</p>
+                </div>
                 <img [src]="movie.image" [alt]="movie.title" class="card-img-top">
             </div>
         </div>
     </div>
+</div>
