--- a/spa/spa-fronted/src/app/components/header/header.component.html
+++ b/spa/spa-fronted/src/app/components/header/header.component.html
@@ -6,9 +6,14 @@
                     <img src="/assets/images/logo.png" alt="logo" height="150" width="150">
                 </h3>
             </div>
-            <div class="col md-8">
+            <div class=" barra col md-8">
                 <form (submit)="buscarPeliculas($event)">
-                    <input type="text" name="movieTitle" class="form-control" autofocus placeholder="Buscar Películas" [(ngModel)]="movieTitle">
+                    <div class="search">
+                        <input type="text" name="movieTitle" class="form-control" autofocus placeholder="Buscar Películas" [(ngModel)]="movieTitle">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="contenedor-icono bi bi-search" viewBox="0 0 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                        </svg>
+                    </div>
                 </form>
             </div>
         </div>
